--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Search",
-  "description": "Search bookmarked URLs containing %s with query in place of %s",
+  "description": "Fire up all search engines at your disposal with a single shot.",
   "version": "0.1.1",
 
   "browser_action": {
